--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -16,7 +16,7 @@
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Brand Management</h2>
+            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Brand Management.,,</h2>
         </div>
     </div>
 
