Category Validation Commit

--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -2,8 +2,10 @@
     ViewBag.Title = "Index";
 }
 <script src="/Scripts/Modules/common_methods.js"></script>
+<script src="/Scripts/Modules/Category/category_validation.js"></script>
 <script src="/Scripts/Modules/Category/category_methods.js"></script>
 <script src="/Scripts/Modules/Category/category_events.js"></script>
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -42,7 +44,7 @@
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
                         <label class="switch">
-                            <input checked="" value="0" type="checkbox">
+                            <input  value="1" type="checkbox">
                             <span></span>
                         </label>
                     </div>
