--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -2,6 +2,10 @@
     ViewBag.Title = "Index";
 }
 
+<script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Brand/brand_methods.js"></script>
+<script src="~/Scripts/Modules/Brand/brand_events.js"></script>
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -16,7 +20,7 @@
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Brand Management.,,</h2>
+            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Brand Management</h2>
         </div>
     </div>
 
@@ -35,7 +39,8 @@
                 <form role="form">
                     <div class="form-group">
                         @*<label>Create / Update size group:</label>*@
-                        <input type="text" class="form-control" placeholder="Enter brand." />
+                        <input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" />
+                        <input type="hidden" name="Brand.Brand_Id">
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
@@ -48,7 +53,7 @@
 
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
-                            <button class="btn btn-success active">Save</button>
+                            <button type="button" class="btn btn-success active" id="btnSaveBrand">Save</button>
                             <button class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
@@ -58,23 +63,32 @@
                 <h4 style="margin-top: 0px;">Brand listing.</h4>
 
                 <div class="form-group">
-                    @*<label>Create / Update size group:</label>*@
-                    <input type="text" class="form-control" placeholder="Enter category to search" />
+                    <input type="text" class="form-control brand-filter" name="Filter.Brand_Name" placeholder="Enter brand to search" />
                 </div>
 
-                <div class="list-group border-bottom push-down-20" style="margin-bottom:0px !important;">
+                <div class="list-group border-bottom push-down-20" id="Brand_Grid">
+
+                </div>
+                
+                @*<div class="list-group border-bottom push-down-20" style="margin-bottom:0px !important;">
                     <a href="#" class="list-group-item active">Arrow</a>
                     <a href="#" class="list-group-item">Louie Phillipe</a>
                     <a href="#" class="list-group-item">Calvin Klein</a>
                     <a href="#" class="list-group-item">Pepe</a>
                     <a href="#" class="list-group-item">Wrangler</a>
-                </div>
+                </div>*@
 
+            </div>
+
+            <div class="row">
+                <div class="col-md-12" style="padding: 0px;text-align:center;" id="divBrandPager">
+
+                </div>
             </div>
 
         </div>
 
-         <div class="col-md-12" style="padding: 0px;text-align:center;">
+         @*<div class="col-md-12" style="padding: 0px;text-align:center;">
 
             <ul class="pagination pagination-sm">
                 <li class="disabled"><a href="#">First</a></li>
@@ -88,7 +102,7 @@
                 <li><a href="#">Last</a></li>
             </ul>
 
-        </div>
+        </div>*@
 
     </div>
 
