--- a/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
+<script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Tax/tax_events.js"></script>
+<script src="~/Scripts/Modules/Tax/tax_methods.js"></script>
+<script src="~/Scripts/Modules/Tax/Tax_validation.js"></script>
+
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -33,18 +38,27 @@
 
                 <div class="form-group">
                     @*<label>Create / Update size group:</label>*@
-                    <input type="text" class="form-control" placeholder="Enter tax name to search" />
+                    <input type="text" class="form-control" name="Filter.Tax_Name" placeholder="Enter tax name to search" />
                 </div>
 
-                <div class="list-group border-bottom push-down-20">
+               <div class="list-group border-bottom push-down-20" id="Tax_Grid">
+
+               </div>
+
+              <div class="row">
+                <div class="col-md-12" style="padding: 0px;text-align:center;" id="divTaxPager">
+
+				</div>
+            </div>
+
+                @*<div class="list-group border-bottom push-down-20">
                     <a href="#" class="list-group-item active">Service tax</a>
                     <a href="#" class="list-group-item">GST</a>
                     <a href="#" class="list-group-item">Swatch bharat tax</a>
-                    <a href="#" class="list-group-item">Krishi kalyan tax</a>
-                    
-                </div>
+                    <a href="#" class="list-group-item">Krishi kalyan tax</a>    
+                </div>*@
 
-            <div class="row">
+            @*<div class="row">
 
                 <div class="col-md-12" style="padding: 0px;text-align:center;">
 
@@ -62,7 +76,7 @@
 
         </div>
 
-            </div>
+            </div>*@
 
             
 
@@ -73,15 +87,16 @@
             <div class="block">
                 <h4 style="margin-top: 0px;">Create - Update tax.</h4>
 
-                <form role="form">
+                <form role="form" id="frmTax">
                     <div class="form-group">
                         @*<label>Create / Update size group:</label>*@
-                        <input type="text" class="form-control" placeholder="Enter tax name." />
+                        <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" />
+                        <input type="hidden" name="Tax.Tax_Id">
                     </div>
 
                     <div class="form-group">
                         @*<label>Create / Update size group:</label>*@
-                        <input type="text" class="form-control" placeholder="Enter tax value (in percentage)." />
+                        <input type="text" class="form-control" placeholder="Enter tax value (in percentage)." name="Tax.Tax_Value" />
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
@@ -94,7 +109,7 @@
 
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px;">
                         <div class="btn-group">
-                            <button class="btn btn-success active">Save</button>
+                            <button type="button" class="btn btn-success active" id="btnSaveTax">Save</button>
                             <button class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
