Tax Master Done

--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
@@ -28,18 +28,24 @@
 
         <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-            @*<div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
+            <div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
 
-                <h4 style="margin-top: 0px;">Search customer.</h4>
+                <h4 style="margin-top: 0px;">Select vendor.</h4>
 
                 <form role="form">
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number." />
+                        <select class="form-control select" placeholder="Select Vendor.">
+                            <option>Vendor1</option>
+                            <option>Vendor2</option>
+                        </select>
                     </div>
 
                 </form>
-            </div>*@
+            </div>
+
+           
+
             <div class="block">
 
                 <h4 style="margin-top: 15px;">Primary information.</h4>
@@ -48,13 +54,13 @@
 
                     <div class="form-group">
 
-                        <input type="text" class="form-control" placeholder="Enter customer first name." />
+                        <input type="text" class="form-control" placeholder="Enter first name." />
 
                     </div>
 
                     <div class="form-group">
 
-                        <input type="text" class="form-control" placeholder="Enter customer last name." />
+                        <input type="text" class="form-control" placeholder="Enter last name." />
 
                     </div>
 
