--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "Index";
 }
 
+<script src="/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Color/color_events.js"></script>
+<script src="~/Scripts/Modules/Color/color_methods.js"></script>
+<script src="~/Scripts/Modules/Color/color_validation.js"></script>
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -9,7 +14,6 @@
     <li class="active">Color Management</li>
 </ul>
 <!-- END BREADCRUMB -->
-
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
 
@@ -34,36 +38,20 @@
 
                 <div class="form-group">
                     @*<label>Create / Update size group:</label>*@
-                    <input type="text" class="form-control" placeholder="Enter color to search" />
+                    <input type="text" class="form-control color-filter" name="Filter.Color" placeholder="Enter color to search" />
                 </div>
 
-                <div class="list-group border-bottom push-down-20">
-                    <a href="#" class="list-group-item active">Blue</a>
-                    <a href="#" class="list-group-item">Green</a>
-                    <a href="#" class="list-group-item">Orange</a>
-                    <a href="#" class="list-group-item">Red</a>
-                    <a href="#" class="list-group-item">Yellow</a>
+                <div class="list-group border-bottom push-down-20" id="Color_Grid">
+                     
                 </div>
 
             </div>
 
             <div class="row">
 
-                <div class="col-md-12" style="padding: 0px;text-align:center;">
-
-            <ul class="pagination pagination-sm">
-                <li class="disabled"><a href="#">First</a></li>
-                <li class="disabled"><a href="#">«</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">»</a></li>
-                <li><a href="#">Last</a></li>
-            </ul>
-
-        </div>
+                <div class="col-md-12" style="padding: 0px;text-align:center;" id="divColorPager"> 
+                    
+                </div>
 
             </div>
 
@@ -74,15 +62,18 @@
             <div class="block">
                 <h4 style="margin-top: 0px;">Create - Update color.</h4>
 
-                <form role="form">
+                <form role="form" id="frmColor">
                     <div class="form-group">
                         @*<label>Create / Update size group:</label>*@
-                        <input type="text" class="form-control" placeholder="Enter color name." />
+                        <input type="text" class="form-control" placeholder="Enter color name." name="Color.Colour" />
+                        <input type="hidden" name="Color.Colour_Id">
                     </div>
 
-                    <div class="form-group input-group color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="colorpicker">
-                        <input class="form-control" readonly="" type="text">
-                        <span class="input-group-addon"><i style="background-color: rgb(154, 42, 77);"></i></span>
+                    <div class="form-group">
+                        <div class="form-group input-group color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="colorpicker">
+                            <input class="form-control" type="text" name="Color.Colour_Code">
+                            <span class="input-group-addon"><i id="iRGBColor" style="background-color: rgb(154, 42, 77);"></i></span>
+                        </div>
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
@@ -93,9 +84,9 @@
                         </label>
                     </div>
 
-                    <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px;">
+                    <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
-                            <button class="btn btn-success active">Save</button>
+                            <button class="btn btn-success active" id="btnSaveColor">Save</button>
                             <button class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
