--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
+﻿@model MyLeoRetailer.Models.EmployeeViewModel
+@using MyLeoRetailerInfo.Common
 
+<script src="~/Scripts/Modules/Employee/employee_events.js"></script>
+<script src="~/Scripts/Modules/Employee/employee_methods.js"></script>
+<script src="~/Scripts/Modules/Employee/employee_validation.js"></script>
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -9,7 +11,6 @@
     <li class="active">Employee Management</li>
 </ul>
 <!-- END BREADCRUMB -->
-
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
 
@@ -24,150 +25,175 @@
 <!-- END CONTENT FRAME -->
 
 <div class="page-content-wrap">
+    <form role="form" id="frmEmployee">
+        <div class="row">
 
-    <div class="row">
+            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
 
-        <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Basic information.</h4> 
 
-            <div class="block">
-                <h4 style="margin-top: 0px;">Basic information.</h4>
-
-                <form role="form">
                     <div class="form-group">
-                        
-                        <input type="text" class="form-control" placeholder="Enter employee name." />
-
+                        <input type="text" class="form-control" placeholder="Enter employee name." name="Employee.Employee_Name" value="@Model.Employee.Employee_Name" />
+                        <input type="hidden" class="form-control" id="hdn_EmployeeId" name="Employee.Employee_Id" value="@Model.Employee.Employee_Id"/>
                     </div>
 
                     <div class="form-group">
-                        
-                        <input type="text" class="form-control" placeholder="Enter designation." />
-                    
-                    </div>
-
-                    <div class="form-group">
-                        <select class="form-control select" placeholder="Select gender.">
-                            <option>Male</option>
-                            <option>Female</option>
+                        <select class="form-control select" name="Employee.Employee_Gender">
+                            <option value="0">Select Gender</option>
+                            @foreach (var item in LookupInfo.Get_Gender_Types())
+                            {
+                                if (Model.Employee.Employee_Gender == item.Key)
+                                {
+                                    <option value="@item.Key" selected="selected">@item.Value</option>
+                                }
+                                else
+                                {
+                                    <option value="@item.Key">@item.Value</option>
+                                }
+                            }
                         </select>
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Date of birth.</span>
-                        <div class="input-group date" id="dp-2" data-date="05-07-2014" data-date-format="dd-mm-yyyy">
-                            <input type="text" class="form-control datepicker" value="05-07-2014" disabled="disabled" />
+                        <div class="input-group date" id="dp-2" @*data-date="05-07-2014"*@ data-date-format="dd-mm-yyyy">
+                            <input type="text" class="form-control datepicker" @*value="05-07-2014"*@ name="Employee.Employee_DOB" value="@((Model.Employee.Employee_DOB == DateTime.MinValue ? "" : Model.Employee.Employee_DOB.ToString("dd-MM-yyyy")))" readonly />
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Date of joining.</span>
-                        <div class="input-group date" id="dp-2" data-date="05-07-2014" data-date-format="dd-mm-yyyy">
-                            <input type="text" class="form-control datepicker" value="05-07-2014" disabled="disabled" />
-                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                        </div>
-                    </div>
+                    </div> 
 
                     <div class="form-group">
                         <div class="col-xs-6 col-sm-6 col-md-8" style="padding-left: 0px;">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Set active.</span>
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-4" style="text-align: right; padding-right: 0px;">
-                            <label class="switch">
-                                <input class="switch" value="1" checked="" type="checkbox">
-                                <span></span>
-                            </label>
-                        </div>
-
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-xs-6 col-sm-6 col-md-8" style="padding-left: 0px;">
-                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Set online access.</span>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-4" style="text-align: right; padding-right: 0px;">
-                            <label class="switch">
-                                <input class="switch" value="1" checked="" type="checkbox">
+                        <div class="col-xs-6 col-sm-6 col-md-4" style="text-align: right; padding-right: 0px;"> 
+                            <label class="switch"> 
+                                @if (Model.Employee.IsActive == false)
+                                { 
+                                    <input value="@Model.Employee.IsActive.ToString()" name="Employee.IsActive" type="checkbox"> 
+                                }
+                                else
+                                {
+                                     <input value="@Model.Employee.IsActive.ToString()" name="Employee.IsActive" checked="checked" type="checkbox"> 
+                                } 
                                 <span></span>
                             </label>
                         </div>
                     </div>
-
+                     
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter username." />
-                    </div>
-                     <div class="form-group">
-                        <select class="form-control select" placeholder="Select role.">
-                            <option>Branch admin</option>
-                            <option>Manager</option>
-                            <option>Back office</option>
+                        <select class="form-control select" name="Employee.Branch_Id">
+                            <option value="0">Select Branch</option>
+                            <option value="1">Andheri</option>
+                            <option value="2">Versova</option>
+                            @*@foreach (var item in Model.Branches)
+                                {
+                                    if (Model.Employee.Branch_Id == item.Key)
+                                    {
+                                        <option value="@item.Key" selected="selected">@item.Value</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.Key">@item.Value</option>
+                                    }
+                                }*@
                         </select>
                     </div>
-                </form>
-            </div>
-        
-        </div>
-
-        <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
-
-            <div class="block">
-                <h4 style="margin-top: 0px;">Address detail.</h4>
-
-                <form role="form">
-                    
-                    <div class="form-group">
-                        <textarea class="form-control" rows="5" placeholder="Residential address."></textarea>
-                    </div>
-                    
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter pincode." />
-                    </div>
 
                     <div class="form-group">
-                        <textarea class="form-control" rows="5" placeholder="Native address."></textarea>
+                        <select class="form-control select" name="Employee.Designation_Id">
+                            <option value="0">Select Designation</option>
+                            @foreach (var item in LookupInfo.Get_Employee_Designation())
+                            {
+                                if (Model.Employee.Designation_Id == item.Key)
+                                {
+                                    <option value="@item.Key" selected="selected">@item.Value</option>
+                                }
+                                else
+                                {
+                                    <option value="@item.Key">@item.Value</option>
+                                }
+                            }
+                        </select>
                     </div>
 
-                </form>
-            </div>
-        
-        </div>
-
-        <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
-
-            <div class="block">
-                <h4 style="margin-top: 0px;">Communication detail.</h4>
-
-                <form role="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 1." />
-                    </div>
-                    
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 2." />
-                    </div>
-
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter landline number." />
-                    </div>
-
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter email address." />
-                    </div>
-                </form>
-            </div>
-        
-        </div>
-        
-        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
-            
-                <div class="btn-group">
-                    <button class="btn btn-success active">Save</button>
-                    <button class="btn btn-danger active">Cancel</button>
                 </div>
-            
-        </div>
 
-    </div>
+            </div>
+
+            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
+
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Address detail.</h4>
+
+                    @*<form role="form">*@
+
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5" placeholder="Residential address." name="Employee.Employee_Address">@Model.Employee.Employee_Address</textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter pincode." name="Employee.Employee_Pincode" value="@(Model.Employee.Employee_Pincode == 0 ? "" : Model.Employee.Employee_Pincode.ToString())" />
+                    </div>
+
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5" placeholder="Native address." name="Employee.Employee_Native_Address">@Model.Employee.Employee_Native_Address</textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter country." name="Employee.Employee_Country" value="@Model.Employee.Employee_Country" />
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter state." name="Employee.Employee_State" value="@Model.Employee.Employee_State" />
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter city." name="Employee.Employee_City" value="@Model.Employee.Employee_City" />
+                    </div>
+                    @*</form>*@
+                </div>
+
+            </div>
+
+            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
+
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Communication detail.</h4>
+
+                    @*<form role="form">*@
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter mobile number 1." name="Employee.Employee_Mobile1" value="@Model.Employee.Employee_Mobile1" maxlength="10"/>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Employee.Employee_Mobile2" value="@Model.Employee.Employee_Mobile2" maxlength="10"/>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter landline number." name="Employee.Employee_Home_Lindline" value="@Model.Employee.Employee_Home_Lindline" maxlength="12"/>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter email address." name="Employee.Employee_EmailId" value="@Model.Employee.Employee_EmailId" />
+                    </div>
+                    @*</form>*@
+                </div>
+
+            </div>
+
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+
+                <div class="btn-group">
+                    <button class="btn btn-success active" id="btnEmployeeSave">Save</button>
+                    @*<button class="btn btn-danger active">Cancel</button>*@
+                    <a class="btn btn-danger active" role="button" href="@Url.Action("Search", "Employee")">Cancel </a>
+                </div>
+
+            </div>
+
+        </div>
+    </form>
 
 </div>
-
