--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -2,6 +2,10 @@
     ViewBag.Title = "Search";
 }
 
+<script src="/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Employee/search_employee_event.js"></script>
+<script src="~/Scripts/Modules/Employee/search_employee_method.js"></script>
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
@@ -31,14 +35,15 @@
 
             <div class="block">
 
-                <form role="form">
+                <form role="form" id="frmSearchEmployee">
 
                     <div class="row">
 
                         <div class="col-md-10" style="padding: 0px;">
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter employee name to search." />
+                                <input type="text" class="form-control" name="Filter.Employee" placeholder="Enter employee name to search." />
+                                <input type="hidden" class="form-control" id="hdf_EmployeeId" name="Employee.Employee_Id" />
                             </div>
 
                         </div>
@@ -46,8 +51,9 @@
                         <div class="col-md-2" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button class="btn btn-success active">Create</button>
-                                <button class="btn btn-danger active">Edit</button>
+                                @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
+                                <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
+                                <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>
                             </div>
 
                         </div>
@@ -60,132 +66,11 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;">
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
-            <table class="table table-bordered table-hover">
+        </div> 
 
-                <thead>
-
-                    <tr>
-                        <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                    </tr>
-                
-                </thead>
-                
-                <tbody>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" checked="" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                </tbody>
-           
-            </table>
-
-        </div>
-
-        <div class="col-md-12" style="padding: 0px;text-align:center;">
-
-            <ul class="pagination pagination-sm">
-                <li class="disabled"><a href="#">First</a></li>
-                <li class="disabled"><a href="#">«</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">»</a></li>
-                <li><a href="#">Last</a></li>
-            </ul>
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divEmployeePager"> 
 
         </div>
 
