--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MyLeoRetailer.Models.CustomerViewModel
-@using MyLeoRetailerInfo;
+@using MyLeoRetailerInfo.Common;
 
 @{
     ViewBag.Title = "Index";
