Gift Voucher Commit

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -17,6 +17,8 @@
                             <li><a href="/Customer/Search"><span class="fa fa-users"></span> Customer Management</a></li>
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
                             <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> VendorContact Management</a></li>
+                            <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> GiftVoucher Management</a></li>
+
                             <li class="xn-openable">
                                 <a href="#"><span class="fa fa-clock-o"></span> Timeline</a>
                                 <ul>
