Tax , VendorContact,GiftVoucher Validation Commit

--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
@@ -6,7 +6,7 @@
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_events.js"></script>
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_methode.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
-
+<script src="~/Scripts/Modules/VendorContact/vendorcontact_validation.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
