--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -4,6 +4,7 @@
 <script src="~/Scripts/Modules/GiftVoucher/giftvoucher_event.js"></script>
 <script src="~/Scripts/Modules/GiftVoucher/giftvoucher_methode.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/GiftVoucher/GiftVoucher_validation.js"></script>
 @{
     ViewBag.Title = "Index";
 }
@@ -33,8 +34,6 @@
 <div class="page-content-wrap">
     <form role="form" id="frmGiftVoucher">
         <div class="row">
-
-            
 
                 <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 490px;">
 
