Branch and Brand commit

--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -45,7 +45,7 @@
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
                         <label class="switch">
-                            <input checked="" value="0" type="checkbox">
+                            <input checked="" name="Brand.IsActive" value="0" type="checkbox" id="Flag">
                             <span></span>
                         </label>
                     </div>
