--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -61,8 +61,17 @@
 
                 <h4 style="margin-top: 0px;">Brand listing.</h4>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     <input type="text" class="form-control brand-filter" name="Filter.Brand_Name" placeholder="Enter brand to search" />
+                </div>*@
+
+                <div class="form-group auto-complete">
+                    <div class="input-group">
+                        <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Brand_Name" id="txtBrand_Name" placeholder="Enter brand to search" value="" data-table="Brand" data-col="Brand_Id,Brand_Name" data-headernames="Brand">
+                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                        <input type="hidden" id="hdnBrandId" value="" name="Filter.Brand_Id" class="auto-complete-value" />
+                        <input type="hidden" id="hdnBrandName" value="" name="Filter.Brand" class="auto-complete-label" />
+                    </div>
                 </div>
 
                 <div class="list-group border-bottom push-down-20" id="Brand_Grid">
