--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -36,9 +36,17 @@
             <div class="block" style="margin-bottom:0px;">
                 <h4 style="margin-top: 0px;">Color listing.</h4>
 
-                <div class="form-group">
-                    @*<label>Create / Update size group:</label>*@
+                @*<div class="form-group">
                     <input type="text" class="form-control color-filter" name="Filter.Color" placeholder="Enter color to search" />
+                </div>*@
+              
+                <div class="form-group auto-complete">
+                    <div class="input-group">
+                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Color" id="txtColor_Name" placeholder="Enter color to search" data-table="Colour" data-col="Colour_ID,Colour_Name" data-headernames="Colour">
+                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                        <input type="hidden" id="hdnColourId" value="" name="Filter.Color" class="auto-complete-value" />
+                        <input type="hidden" id="hdnColourName" value="" name="Filter.Color" class="auto-complete-label" />
+                    </div>
                 </div>
 
                 <div class="list-group border-bottom push-down-20" id="Color_Grid">
