--- a/MyLeoRetailer/Views/Shared/_Layout.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Layout.cshtml
@@ -17,11 +17,18 @@
         
         @*<link href="~/Content/Atlant/css/fontawesome/font-awesome.min.css" rel="stylesheet" />*@
 
-        
+        <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+
  <!-- START SCRIPTS -->
         <!-- START PLUGINS -->
         <script type="text/javascript" src="../Content/Atlant/js/plugins/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="../Content/Atlant/js/plugins/jquery/jquery-ui.min.js"></script>
+        @*<script type="text/javascript" src="../Content/Atlant/js/plugins/jquery/jquery-ui.min.js"></script>*@
+
+        @*<script src="~/Scripts/jquery-1.8.2.min.js"></script>*@
+        <script src="~/Scripts/jquery-ui-1.8.24.min.js"></script>
+
+        
+
         <script type="text/javascript" src="../Content/Atlant/js/plugins/bootstrap/bootstrap.min.js"></script>        
         <!-- END PLUGINS -->
 
@@ -80,6 +87,9 @@
 
         <script src="~/Scripts/generic.popup.js"></script>
         <script src="~/Scripts/generic.lookup.js"></script>
+
+        <script src="~/Scripts/generic.autocomplete.js"></script>
+        
 
         <!-- END THIS PAGE PLUGINS-->        
 
